add server.js & dependencies

--- a/app/index.html
+++ b/app/index.html
@@ -284,7 +284,7 @@
     <section class="lead">
       <h1 class="lead__title">Docker</h1>
       <p class="lead__subtitle">This app is running inside a container.</p>
-      <img class="lead__image" src="docker-picture" alt="docker logo">
+      <img class="lead__image" src="./images/docker.png" alt="docker logo">
     </section>
 
     <section class="intro">
